uniresources.html page

--- a/uniresources.html
+++ b/uniresources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sutdent Life Navigation</title>
+    <title>Student Life Navigation</title>
     <link rel="stylesheet" href="./assets/styles/global.css">
     <link rel="stylesheet" href="./assets/styles/home.css">
 </head>
@@ -79,25 +79,25 @@
         <div id="home-hero-left-container">
             <div>
                 <h1 id="home-hero-left-title">
-                    <span>Navigate your new</span>
-                    <span>student life</span>
+                    <span>Manchester Metropolitan University</span>
+                    <span>MMU</span>
                 </h1>
 
                 <p id="home-hero-left-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. 
+                Manchester Metropolitan University (MMU) is located in the centre of Manchester, England.
+                The university has over 40,000 students and over 4,000 members of staff.
+                It is home to four faculties (Arts and Humanities, Business and Law, Health and Education and Science and Engineering) and is one of the largest universities in the UK, measured by the size of its student population in 2020/21.
                 </p>
                 <div id="home-hero-left-buttons-container">
                     <div id="home-hero-left-buttons-primary">
-                        <a href="#">
-                            Start
+                        <a href="https://www.mmu.ac.uk/">
+                            UNI homepage
                         </a>
                     </div>
 
                     <div id="home-hero-left-buttons-secondary">
-                        <a href="#">
-                            F.A.Q
+                        <a href="https://my.mmu.ac.uk/campusm/home#menu">
+                            MOODLE
                         </a>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
         </div>
 
         <div id="home-hero-right-container">
-            <img src="https://placehold.co/2100" alt="">
+            <img src="./assets/images/2ndlogo.jpg" alt="MMU" width="500" height="300">
         </div>
     </main>
 </body>
