--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
 
         <div id="home-hero-right-container">
-            <img src="https://placehold.co/2100" alt="">
+            <img src="./assets/images/mmu-hero.jpg" alt="">
         </div>
     </main>
 </body>
