Add home page website description text

--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
                 </h1>
 
                 <p id="home-hero-left-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. 
+                    Whether you are a new or returning student to Manchester we are here to help you with your student life.
+					Our website is packed with useful information from travel & shopping discounts to events in the area.
                 </p>
                 <div id="home-hero-left-buttons-container">
                     <div id="home-hero-left-buttons-primary">
