--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sutdent Life Navigation</title>
+    <title>Student Life Navigation</title>
     <link rel="stylesheet" href="./assets/styles/global.css">
     <link rel="stylesheet" href="./assets/styles/home.css">
 </head>
@@ -41,10 +41,10 @@
                     Student Discounts
                 </a>
 
-                <a href="/">
+                <a href="transport.html">
                     Public Transport
                 </a>
-
+    
                 <a href="uniresources.html">
                     University Resources
                 </a>
@@ -65,7 +65,7 @@
                 Student Discounts
             </a>
 
-            <a href="/">
+            <a href="transport.html">
                 Public Transport
             </a>
 
