--- a/transport.html
+++ b/transport.html
@@ -33,7 +33,7 @@
                     Home
                 </a>
 
-                <a href="/">
+                <a href="events.html">
                     Events
                 </a>
 
@@ -57,7 +57,7 @@
                 Home
             </a>
 
-            <a href="/">
+            <a href="events.html">
                 Events
             </a>
 
