Added Sports and Football pages
Added the main Sports Page and Football Page. Content for Football is added but need to do Styling.
Also, corrected the hyperlinks in uniresources.html so that it leads to the correct place.

--- a/sports.html
+++ b/sports.html
@@ -44,7 +44,7 @@
                 <a href="transport.html">
                     Public Transport
                 </a>
-
+    
                 <a href="uniresources.html">
                     University Resources
                 </a>
@@ -79,25 +79,37 @@
         <div id="home-hero-left-container">
             <div>
                 <h1 id="home-hero-left-title">
-                    <span>Manchester Metropolitan University</span>
-                    <span>MMU</span>
+                    <span>Sports in</span>
+                    <span>Manchester</span>
                 </h1>
 
                 <p id="home-hero-left-description">
-                Manchester Metropolitan University (MMU) is located in the centre of Manchester, England.
-                The university has over 40,000 students and over 4,000 members of staff.
-                It is home to four faculties (Arts and Humanities, Business and Law, Health and Education and Science and Engineering) and is one of the largest universities in the UK, measured by the size of its student population in 2020/21.
+                    Whether it's Manchester's many football teams, or it's Rugby or Cricket Teams,
+                    Manchester has a Sport for everyone.
                 </p>
                 <div id="home-hero-left-buttons-container">
                     <div id="home-hero-left-buttons-primary">
-                        <a href="https://www.mmu.ac.uk/">
-                            UNI homepage
+                        <a href="https://www.visitmanchester.com/whats-on/sporting-events/?bounds=false&view=list&sort=date">
+                            What's On
                         </a>
                     </div>
 
                     <div id="home-hero-left-buttons-secondary">
-                        <a href="https://my.mmu.ac.uk/campusm/home#menu">
-                            MOODLE
+                        <a href="football.html">
+                            Football
+                        </a>
+                    </div>
+                </div>
+                <div id="home-hero-left-buttons-container">
+                    <div id="home-hero-left-buttons-primary">
+                        <a href="#">
+                            Rugby
+                        </a>
+                    </div>
+
+                    <div id="home-hero-left-buttons-secondary">
+                        <a href="#">
+                            Other Sports
                         </a>
                     </div>
                 </div>
@@ -105,7 +117,7 @@
         </div>
 
         <div id="home-hero-right-container">
-            <img src="./assets/images/2ndlogo.jpg" alt="MMU" width="500" height="300">
+            <img src="./assets/images/mmu-hero.jpg" alt="">
         </div>
     </main>
 </body>
