Added Bars page and updated descs
Added the Bars page and added a page description to Football to match the Bars Page.
Styling needs to be done for both these pages.

--- a/football.html
+++ b/football.html
@@ -82,41 +82,79 @@
             <span>Football</span>
         </h1>
         
+        <span>
+            Manchester has six professional football teams in the top four divisions of English Football. These six, along with a link to their stadium, ticketing and parking, can be found below.
+        </span>
+
         <h2>Manchester City</h2>
         <span>Located at the Etihad Stadium, Manchester City are current Champions of the World after a Treble Winning Season.</span>
-        <h3><a href="https://www.google.com/maps/place/Etihad+Stadium/@53.4831634,-2.2029539,17z/data=!3m1!4b1!4m6!3m5!1s0x487bb10dcc950ae3:0x549a8dcce67a876a!8m2!3d53.4831634!4d-2.2003736!16zL20vMDJueWNi?entry=ttu">Stadium</a></h3>
-        <h3><a href="https://www.mancity.com/tickets">Tickets</a></h3>
-        <h3><a href="https://www.mancity.com/ticketing-and-hospitality/parking">Parking</a></h3>
+        <h3><a href="https://www.google.com/maps/place/Etihad+Stadium/@53.4831634,-2.2029539,17z/data=!3m1!4b1!4m6!3m5!1s0x487bb10dcc950ae3:0x549a8dcce67a876a!8m2!3d53.4831634!4d-2.2003736!16zL20vMDJueWNi?entry=ttu">
+            Stadium
+        </a></h3>
+        <h3><a href="https://www.mancity.com/tickets">
+            Tickets
+        </a></h3>
+        <h3><a href="https://www.mancity.com/ticketing-and-hospitality/parking">
+            Parking
+        </a></h3>
 
         <h2>Manchester United</h2>
         <span>Located at Old Trafford, Manchester United are the Second Most Decorated club in England.</span>
-        <h3><a href="https://www.google.com/maps/place/Old+Trafford/@53.4623449,-2.2901751,17z/data=!4m15!1m8!3m7!1s0x487bade198f6a2ab:0xa06b7a1e162e18f9!2sOld+Trafford,+Stretford,+Manchester!3b1!8m2!3d53.462094!4d-2.2766419!16zL20vMDdjZDc4!3m5!1s0x487bae72e7e47f69:0x6c930e96df4455fe!8m2!3d53.4630589!4d-2.2913401!16zL20vMDMwbHBs?entry=ttu">Stadium</a></h3>
-        <h3><a href="https://tickets.manutd.com/en-GB/categories/home-tickets">Tickets</a></h3>
-        <h3><a href="https://tickets.manutd.com/en-GB/categories/car-parking">Parking</a></h3>
+        <h3><a href="https://www.google.com/maps/place/Old+Trafford/@53.4623449,-2.2901751,17z/data=!4m15!1m8!3m7!1s0x487bade198f6a2ab:0xa06b7a1e162e18f9!2sOld+Trafford,+Stretford,+Manchester!3b1!8m2!3d53.462094!4d-2.2766419!16zL20vMDdjZDc4!3m5!1s0x487bae72e7e47f69:0x6c930e96df4455fe!8m2!3d53.4630589!4d-2.2913401!16zL20vMDMwbHBs?entry=ttu">
+            Stadium
+        </a></h3>
+        <h3><a href="https://tickets.manutd.com/en-GB/categories/home-tickets">
+            Tickets
+        </a></h3>
+        <h3><a href="https://tickets.manutd.com/en-GB/categories/car-parking">
+            Parking
+        </a></h3>
 
         <h2>Bolton Wanderers</h2>
         <span>Located at Toughsheet Community Stadium, Bolton Wanderers are currently fighting for Promotion to the English Second Divison.</span>
-        <h3><a href="https://www.google.com/maps/place/Toughsheet+Community+Stadium/@53.5805967,-2.5382133,17z/data=!3m1!4b1!4m6!3m5!1s0x487b09aab37003ad:0x4ea3dea69347d31c!8m2!3d53.5805967!4d-2.535633!16s%2Fg%2F11bwc_y92z?entry=ttu">Stadium</a></h3>
-        <h3><a href="https://www.bwfc.co.uk/tickets">Tickets</a></h3>
-        <h3><a href="https://www.bwfc.co.uk/parking">Parking</a></h3>
+        <h3><a href="https://www.google.com/maps/place/Toughsheet+Community+Stadium/@53.5805967,-2.5382133,17z/data=!3m1!4b1!4m6!3m5!1s0x487b09aab37003ad:0x4ea3dea69347d31c!8m2!3d53.5805967!4d-2.535633!16s%2Fg%2F11bwc_y92z?entry=ttu">
+            Stadium
+        </a></h3>
+        <h3><a href="https://www.bwfc.co.uk/tickets">
+            Tickets
+        </a></h3>
+        <h3><a href="https://www.bwfc.co.uk/parking">
+            Parking
+        </a></h3>
 
         <h2>Wigan Athletic</h2>
         <span>Located at the DW Stadium, Wigan Athletic are currently sat mid-table in the English Third Division.</span>
-        <h3><a href="https://www.google.com/maps/place/DW+Stadium/@53.5476804,-2.6566874,17z/data=!3m1!4b1!4m6!3m5!1s0x487b0f8510869d3b:0x3f15027edc56c516!8m2!3d53.5476804!4d-2.6541071!16s%2Fm%2F0j00wgv?entry=ttu">Stadium</a></h3>
-        <h3><a href="https://wiganathletic.com/match-tickets/">Tickets</a></h3>
-        <h3><a href="https://wiganathletic.com/tickets/directions-and-parking/">Parking</a></h3>
+        <h3><a href="https://www.google.com/maps/place/DW+Stadium/@53.5476804,-2.6566874,17z/data=!3m1!4b1!4m6!3m5!1s0x487b0f8510869d3b:0x3f15027edc56c516!8m2!3d53.5476804!4d-2.6541071!16s%2Fm%2F0j00wgv?entry=ttu">
+            Stadium
+        </a></h3>
+        <h3><a href="https://wiganathletic.com/match-tickets/">
+            Tickets
+        </a></h3>
+        <h3><a href="https://wiganathletic.com/tickets/directions-and-parking/">
+            Parking
+        </a></h3>
 
         <h2>Salford City</h2>
         <span>Located at the Peninsula Stadium, Salford City are currently sat near the bottom of the English Fourth Division.</span>
-        <h3><a href="https://www.google.com/maps/place/Peninsula+Stadium/@53.5138167,-2.2775961,17z/data=!4m6!3m5!1s0x487bafdb9893739d:0x547b35f5f5698436!8m2!3d53.5136345!4d-2.2767727!16s%2Fm%2F0k2_993?entry=ttu">Stadium</a></h3>
-        <h3><a href="https://www.salfordcityfc.co.uk/tickets">Tickets</a></h3>
+        <h3><a href="https://www.google.com/maps/place/Peninsula+Stadium/@53.5138167,-2.2775961,17z/data=!4m6!3m5!1s0x487bafdb9893739d:0x547b35f5f5698436!8m2!3d53.5136345!4d-2.2767727!16s%2Fm%2F0k2_993?entry=ttu">
+            Stadium 
+        </a></h3>
+        <h3><a href="https://www.salfordcityfc.co.uk/tickets">
+            Tickets
+        </a></h3>
         <h3>No On-site Parking</h3>
 
         <h2>Stockport County</h2>
         <span>Located at Edgely Park, Stockport County are currently in a Title Race for the English Fourth Division.</span>
-        <h3><a href="https://www.google.com/maps/place/Edgeley+Park/@53.3996479,-2.1680424,19z/data=!4m9!1m2!2m1!1sstockport+county!3m5!1s0x487bb36f621c22bb:0x3b53d3ff9ebe1558!8m2!3d53.3996585!4d-2.1662968!16zL20vMDJrMThm?entry=ttu">Stadium</a></h3>
-        <h3><a href="https://www.stockportcounty.com/match/match-tickets/">Tickets</a></h3>
-        <h3><a href="https://www.stockportcounty.com/edgeley-parking/">Parking</a></h3>
+        <h3><a href="https://www.google.com/maps/place/Edgeley+Park/@53.3996479,-2.1680424,19z/data=!4m9!1m2!2m1!1sstockport+county!3m5!1s0x487bb36f621c22bb:0x3b53d3ff9ebe1558!8m2!3d53.3996585!4d-2.1662968!16zL20vMDJrMThm?entry=ttu">
+            Stadium
+        </a></h3>
+        <h3><a href="https://www.stockportcounty.com/match/match-tickets/">
+            Tickets
+        </a></h3>
+        <h3><a href="https://www.stockportcounty.com/edgeley-parking/">
+            Parking
+        </a></h3>
     </main>
 </body>
 
