--- a/discount.html
+++ b/discount.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sutdent Life Navigation</title>
+    <title>Student Life Navigation</title>
     
     <link rel="stylesheet" href="./assets/styles/global.css">
     <link rel="stylesheet" href="./assets/styles/home.css">
@@ -13,7 +13,7 @@
         <nav>
             <!-- Logo -->
             <div id="nav-logo-container">
-                <a href="#">
+                <a href="index.html">
                     <img src="./assets/images/logo.svg" alt="Student Nav">
                 </a>
             </div>
@@ -31,23 +31,23 @@
 
             <!-- Desktop nav buttons -->
             <div id="nav-buttons-container">
-                <a href="/">
+                <a href="index.html">
                     Home
                 </a>
 
-                <a href="/">
+                <a href="events.html">
                     Events
                 </a>
 
-                <a href="file:///C:/Users/23747739/OneDrive%20-%20MMU/Downloads/New%20folder%20(2)/Student-Nav-Website-main%20(1)/Student-Nav-Website-main/discount.html">
+                <a href="discount.html">
                     Student Discounts
                 </a>
 
-                <a href="/">
+                <a href="transport.html">
                     Public Transport
                 </a>
 
-                <a href="/">
+                <a href="uniresources.html">
                     University Resources
                 </a>
             </div>
@@ -55,23 +55,23 @@
 
         <!-- Popover for mobile nav -->
         <div popover id="mobile-nav-popover">
-            <a href="/">
+            <a href="index.html">
                 Home
             </a>
 
-            <a href="/">
+            <a href="events.html">
                 Events
             </a>
 
-            <a href="/">
+            <a href="discount.html">
                 Student Discounts
             </a>
 
-            <a href="/">
+            <a href="transport.html">
                 Public Transport
             </a>
 
-            <a href="/">
+            <a href="uniresources.html">
                 University Resources
             </a>
         </div>
