--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Sutdent Life Navigation</title>
+	<title>Student Life Navigation</title>
 	<link rel="stylesheet" href="./assets/styles/global.css">
 	<link rel="stylesheet" href="./assets/styles/events.css">
 </head>
@@ -12,7 +12,7 @@
 		<nav>
 			<!-- Logo -->
 			<div id="nav-logo-container">
-				<a href="#">
+				<a href="index.html">
 					<img src="./assets/images/logo.svg" alt="Student Nav">
 				</a>
 			</div>
@@ -38,7 +38,7 @@
 					Events
 				</a>
 
-				<a href="/">
+				<a href="discount.html">
 					Student Discounts
 				</a>
 
@@ -62,7 +62,7 @@
 				Events
 			</a>
 
-			<a href="/">
+			<a href="discount.html">
 				Student Discounts
 			</a>
 
