--- a/bars.html
+++ b/bars.html
@@ -11,7 +11,7 @@
         <nav>
             <!-- Logo -->
             <div id="nav-logo-container">
-                <a href="#">
+                <a href="index.html">
                     <img src="./assets/images/logo.svg" alt="Student Nav">
                 </a>
             </div>
