--- a/sports.html
+++ b/sports.html
@@ -11,7 +11,7 @@
         <nav>
             <!-- Logo -->
             <div id="nav-logo-container">
-                <a href="#">
+                <a href="index.html">
                     <img src="./assets/images/logo.svg" alt="Student Nav">
                 </a>
             </div>
@@ -37,7 +37,7 @@
                     Events
                 </a>
 
-                <a href="/">
+                <a href="discount.html">
                     Student Discounts
                 </a>
 
@@ -61,7 +61,7 @@
                 Events
             </a>
 
-            <a href="/">
+            <a href="discount.html">
                 Student Discounts
             </a>
 
@@ -97,19 +97,6 @@
                     <div id="home-hero-left-buttons-secondary">
                         <a href="football.html">
                             Football
-                        </a>
-                    </div>
-                </div>
-                <div id="home-hero-left-buttons-container">
-                    <div id="home-hero-left-buttons-primary">
-                        <a href="#">
-                            Rugby
-                        </a>
-                    </div>
-
-                    <div id="home-hero-left-buttons-secondary">
-                        <a href="#">
-                            Other Sports
                         </a>
                     </div>
                 </div>
