--- a/transport.html
+++ b/transport.html
@@ -11,7 +11,7 @@
         <nav>
             <!-- Logo -->
             <div id="nav-logo-container">
-                <a href="#">
+                <a href="index.html">
                     <img src="./assets/images/logo.svg" alt="Student Nav">
                 </a>
             </div>
@@ -37,7 +37,7 @@
                     Events
                 </a>
 
-                <a href="/">
+                <a href="discount.html">
                     Student Discounts
                 </a>
 
@@ -61,7 +61,7 @@
                 Events
             </a>
 
-            <a href="/">
+            <a href="discount.html">
                 Student Discounts
             </a>
 
