--- a/shopping.html
+++ b/shopping.html
@@ -12,7 +12,7 @@
         <nav>
             <!-- Logo -->
             <div id="nav-logo-container">
-                <a href="index.html">
+                <a href="#">
                     <img src="./assets/images/logo.svg" alt="Student Nav">
                 </a>
             </div>
@@ -30,23 +30,23 @@
 
             <!-- Desktop nav buttons -->
             <div id="nav-buttons-container">
-                <a href="index.html">
+                <a href="/">
                     Home
                 </a>
 
-                <a href="events.html">
+                <a href="/">
                     Events
                 </a>
 
-                <a href="discount.html">
+                <a href="/">
                     Student Discounts
                 </a>
 
-                <a href="transport.html">
+                <a href="/">
                     Public Transport
                 </a>
 
-                <a href="uniresources.html">
+                <a href="/">
                     University Resources
                 </a>
             </div>
@@ -54,23 +54,23 @@
 
         <!-- Popover for mobile nav -->
         <div popover id="mobile-nav-popover">
-            <a href="index.html">
+            <a href="/">
                 Home
             </a>
 
-            <a href="events.html">
+            <a href="/">
                 Events
             </a>
 
-            <a href="discount.html">
+            <a href="/">
                 Student Discounts
             </a>
 
-            <a href="transport.html">
+            <a href="/">
                 Public Transport
             </a>
 
-            <a href="uniresources.html">
+            <a href="/">
                 University Resources
             </a>
         </div>
@@ -106,12 +106,11 @@
             </div>
         </div>
 
-        <div id="home-hero-right-container-arndale-image">
-            <img src="./assets/images/arndale.jpg" alt="Arndale Shopping Center" style="width:100%">
-        </div>
-
         <div id="home-hero-right-container-trafford-image">
             <img src="./assets/images/trafford_center.jpg" alt="The Trafford Center" style="width:100%">
+        </div>
+        <div id="home-hero-right-container-arndale-image">
+            <img src="./assets/images/arndale.jpg" alt="Arndale Shopping Center" style="width:100%">
         </div>
     </main>
 </body>
