Make home page start button navigate to the events page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </p>
                 <div id="home-hero-left-buttons-container">
                     <div id="home-hero-left-buttons-primary">
-                        <a href="#">
+                        <a href="events.html">
                             Start
                         </a>
                     </div>
