--- a/discount.html
+++ b/discount.html
@@ -4,8 +4,7 @@
     <title>Student Life Navigation</title>
     
     <link rel="stylesheet" href="./assets/styles/global.css">
-    <link rel="stylesheet" href="./assets/styles/home.css">
-    <link rel="stylesheet" href="assets/styles/discount.css">
+    <link rel="stylesheet" href="./assets/styles/discount.css">
 </head>
 
 <body>
@@ -78,24 +77,23 @@
     </header>
 
     <main>
-        <div id="home-hero-left-container">
+        <div id="discounts-hero-left-container">
             <div>
-                <h1 id="home-hero-left-title">
+                <h1 id="discounts-hero-left-title">
                     <span>Student Discounts</span>
-                    <span></span>
                 </h1>
 
-                <p id="home-hero-left-description">
+                <p id="discounts-hero-left-description">
                     Discounts all year round with UniDays and Student Bees
                 </p>
-                <div id="home-hero-left-buttons-container">
-                    <div id="home-hero-left-buttons-primary">
+                <div id="discounts-hero-left-buttons-container">
+                    <div id="discounts-hero-left-buttons-primary">
                         <a href="https://www.myunidays.com/GB/en-GB/join?rd=true">
                             UniDays
                         </a>
                     </div>
 
-                    <div id="home-hero-left-buttons-secondary">
+                    <div id="discounts-hero-left-buttons-secondary">
                         <a href="https://www.studentbeans.com/uk">
                             Student Bees
                         </a>
@@ -104,7 +102,7 @@
             </div>
         </div>
 
-        <div id="home-hero-right-container-discount-image">
+        <div id="discounts-hero-right-container">
             <img src="./assets/images/discounts.PNG" alt="Student Discounts">
         </div>
     </main>
