added pages to nav

--- a/events.html
+++ b/events.html
@@ -33,19 +33,31 @@
 				<a href="index.html">
 					Home
 				</a>
-
+	
 				<a href="events.html">
 					Events
 				</a>
-
+	
 				<a href="discount.html">
 					Student Discounts
 				</a>
-
+	
 				<a href="transport.html">
 					Public Transport
 				</a>
-
+	
+				<a href="shopping.html">
+					Shopping
+				</a>
+	
+				<a href="sports.html">
+					Sports
+				</a>
+	
+				<a href="bars.html">
+					Bars
+				</a>
+	
 				<a href="uniresources.html">
 					University Resources
 				</a>
@@ -55,24 +67,36 @@
 		<!-- Popover for mobile nav -->
 		<div popover id="mobile-nav-popover">
 			<a href="index.html">
-				Home
-			</a>
+                Home
+            </a>
 
-			<a href="events.html">
-				Events
-			</a>
+            <a href="events.html">
+                Events
+            </a>
 
-			<a href="discount.html">
-				Student Discounts
-			</a>
+            <a href="discount.html">
+                Student Discounts
+            </a>
 
-			<a href="transport.html">
-				Public Transport
-			</a>
+            <a href="transport.html">
+                Public Transport
+            </a>
 
-			<a href="uniresources.html">
-				University Resources
-			</a>
+            <a href="shopping.html">
+                Shopping
+            </a>
+
+            <a href="sports.html">
+                Sports
+            </a>
+
+            <a href="bars.html">
+                Bars
+            </a>
+
+            <a href="uniresources.html">
+                University Resources
+            </a>
 		</div>
 	</header>
 
